# ehr

./: .env.example  .gitignore  AGENTS.md  DEMO.md  Makefile  README.md  design-qa.md  docker-compose.yml  package.json
.github/: frozen-migrations.sha256
.github/workflows/: ci.yml  modal-deploy.yml  vercel-preview.yml
apps/web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  playwright.hosted.config.ts  vitest.config.ts
apps/web/e2e/: api-contract.spec.ts  (+2 more)
backend/: README.md  modal_app.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260716_0001_create_domain_schema.py  20260716_0002_note_guards_and_task_links.py  20260717_0003_learning_substrate.py
backend/app/: __init__.py  ai.py  ai_cli.py  cli.py  clock.py  config.py  database.py  environment_agent.py  learning.py  learning_console.py  main.py  models.py  observability.py  performance_cli.py  providers.py  schemas.py  security.py  seed.py  services.py
backend/tests/: __init__.py  conftest.py  test_ai_evaluations.py  test_contracts.py  test_endpoints.py  test_environment_agent.py  test_learning_capture.py  test_learning_console_api.py  test_learning_console_reads.py  test_learning_environment.py  test_migrations.py  test_modal_boundary.py  test_observability.py  test_performance_cli.py  test_workflows.py
docs/: architecture.md  capabilities.md  data-safety-security.md  database.md  deployment.md  fhir-mapping.md  learning-environment.md  performance.md  production-readiness.md
scripts/: provision-managed-infra.sh
(+115 files in other folders)
