[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ambrosia-domain-api"
version = "0.1.0"
description = "Neon-first domain API for Ambrosia Health's synthetic dermatology operating system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "itsdangerous>=2.2,<3",
  "modal>=1.2,<2",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
ambrosia-db = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
